hack/legacy/test/cases/00-ingress-match-type/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /foo
        pathType: Prefix
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /bar1
        pathType: Exact
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /bar2/
        pathType: Exact
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: "/baz+/"
        pathType: ImplementationSpecific
